Apologies for the messy commit. While working on GraphC I looked to LinkC for help in removing a node but realized its missing that functionality. So I started implementing that too.

--- a/docs/latex/DynamiCTest_8c.tex
+++ b/docs/latex/DynamiCTest_8c.tex
@@ -13,8 +13,7 @@ Unit testing for \mbox{\hyperlink{DynamiC_8h}{Dynami\+C.\+h}}.
 {\ttfamily \#include $<$math.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}../src/\+Dynami\+C.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../../lib/unity.\+h\char`\"{}}\newline
-Include dependency graph for Dynami\+CTest.\+c\+:
-\nopagebreak
+Include dependency graph for Dynami\+CTest.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
