--- a/docs/latex/DynamiC_8h.tex
+++ b/docs/latex/DynamiC_8h.tex
@@ -6,16 +6,14 @@ Specification of \mbox{\hyperlink{structDynamiC}{DynamiC}}.
 
 
 {\ttfamily \#include $<$stddef.\+h$>$}\newline
-Include dependency graph for Dynami\+C.\+h\+:
-\nopagebreak
+Include dependency graph for Dynami\+C.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=212pt]{DynamiC_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
