--- a/docs/latex/GraphCTest_8c.tex
+++ b/docs/latex/GraphCTest_8c.tex
@@ -7,8 +7,7 @@ Unit testing for \mbox{\hyperlink{GraphC_8h}{Graph\+C.\+h}}.
 
 {\ttfamily \#include \char`\"{}../src/\+Graph\+C.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../../lib/unity.\+h\char`\"{}}\newline
-Include dependency graph for Graph\+CTest.\+c\+:
-\nopagebreak
+Include dependency graph for Graph\+CTest.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
