--- a/docs/latex/GraphC_8h.tex
+++ b/docs/latex/GraphC_8h.tex
@@ -6,16 +6,14 @@ Interface for \mbox{\hyperlink{structGraphC}{GraphC}}.
 
 
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
-Include dependency graph for Graph\+C.\+h\+:
-\nopagebreak
+Include dependency graph for Graph\+C.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=205pt]{GraphC_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -26,9 +24,9 @@ This graph shows which files directly or indirectly include this file\+:
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structVertex}{Vertex}}
-\item 
+\begin{DoxyCompactList}\small\item\em The main nodes that make up the graph. Contains a pointer to another vertex as it\textquotesingle{}s neighbor, if one exists. \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structGraphC}{GraphC}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em The main data structure used to interact and interface with the graph. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Typedefs}
 \begin{DoxyCompactItemize}
 \item 
