--- a/docs/latex/HashCTest_8c.tex
+++ b/docs/latex/HashCTest_8c.tex
@@ -6,8 +6,7 @@
 {\ttfamily \#include \char`\"{}../../lib/unity.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../src/\+Hash\+C.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../../lib/helper\+\_\+functions.\+h\char`\"{}}\newline
-Include dependency graph for Hash\+CTest.\+c\+:
-\nopagebreak
+Include dependency graph for Hash\+CTest.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
