--- a/docs/latex/HashC_8c.tex
+++ b/docs/latex/HashC_8c.tex
@@ -9,8 +9,7 @@ Implementation for hashmaps in C.
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include $<$string.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}Hash\+C.\+h\char`\"{}}\newline
-Include dependency graph for Hash\+C.\+c\+:
-\nopagebreak
+Include dependency graph for Hash\+C.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
