--- a/docs/latex/LinkCTest_8c.tex
+++ b/docs/latex/LinkCTest_8c.tex
@@ -9,8 +9,7 @@ Unit testing for \mbox{\hyperlink{LinkC_8h}{Link\+C.\+h}}.
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}../src/\+Link\+C.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../../lib/unity.\+h\char`\"{}}\newline
-Include dependency graph for Link\+CTest.\+c\+:
-\nopagebreak
+Include dependency graph for Link\+CTest.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
