--- a/docs/latex/LinkC_8c.tex
+++ b/docs/latex/LinkC_8c.tex
@@ -10,8 +10,7 @@ Implementation of \mbox{\hyperlink{structLinkC}{LinkC}}.
 {\ttfamily \#include $<$string.\+h$>$}\newline
 {\ttfamily \#include $<$math.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}Link\+C.\+h\char`\"{}}\newline
-Include dependency graph for Link\+C.\+c\+:
-\nopagebreak
+Include dependency graph for Link\+C.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
