--- a/docs/latex/LinkC_8h.tex
+++ b/docs/latex/LinkC_8h.tex
@@ -6,16 +6,14 @@ Interface for \mbox{\hyperlink{structLinkC}{LinkC}}, a custom generic doubly-\/l
 
 
 {\ttfamily \#include $<$stddef.\+h$>$}\newline
-Include dependency graph for Link\+C.\+h\+:
-\nopagebreak
+Include dependency graph for Link\+C.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=196pt]{LinkC_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
