--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -3,11 +3,11 @@ Here are the data structures with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{structBstC}{BstC}} }{\pageref{structBstC}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structBstCNode}{Bst\+CNode}} }{\pageref{structBstCNode}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structDynamiC}{DynamiC}} \\*Our main struct that contains all the data and metainfo about our dynamic array }{\pageref{structDynamiC}}{}
-\item\contentsline{section}{\mbox{\hyperlink{structGraphC}{GraphC}} }{\pageref{structGraphC}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structGraphC}{GraphC}} \\*The main data structure used to interact and interface with the graph }{\pageref{structGraphC}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structHashC__pair}{Hash\+C\+\_\+pair}} \\*Our table will be made out of pairs which is our main data unit. Contains a string as its key and an int as the actual value }{\pageref{structHashC__pair}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structHashC__table}{Hash\+C\+\_\+table}} \\*Our main table struct which contains our pairs. This is the main object that users will interact with }{\pageref{structHashC__table}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structLinkC}{LinkC}} \\*The main struct that contains essential information about our linked list }{\pageref{structLinkC}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structLinkCNode}{Link\+CNode}} \\*The nodes that make up our linked list }{\pageref{structLinkCNode}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structUNITY__STORAGE__T}{UNITY\+\_\+\+STORAGE\+\_\+T}} }{\pageref{structUNITY__STORAGE__T}}{}
-\item\contentsline{section}{\mbox{\hyperlink{structVertex}{Vertex}} }{\pageref{structVertex}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structVertex}{Vertex}} \\*The main nodes that make up the graph. Contains a pointer to another vertex as it\textquotesingle{}s neighbor, if one exists }{\pageref{structVertex}}{}
 \end{DoxyCompactList}
