--- a/docs/latex/bstCTest_8c.tex
+++ b/docs/latex/bstCTest_8c.tex
@@ -12,8 +12,7 @@ Unit testing for Bst\+C.\+h.
 {\ttfamily \#include \char`\"{}../src/bst\+C.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../../lib/unity.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}../../lib/helper\+\_\+functions.\+h\char`\"{}}\newline
-Include dependency graph for bst\+CTest.\+c\+:
-\nopagebreak
+Include dependency graph for bst\+CTest.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
