--- a/docs/latex/structBstC.tex
+++ b/docs/latex/structBstC.tex
@@ -2,8 +2,7 @@
 \label{structBstC}\index{BstC@{BstC}}
 
 
-Collaboration diagram for BstC\+:
-\nopagebreak
+Collaboration diagram for BstC\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
