--- a/docs/latex/structBstCNode.tex
+++ b/docs/latex/structBstCNode.tex
@@ -2,8 +2,7 @@
 \label{structBstCNode}\index{BstCNode@{BstCNode}}
 
 
-Collaboration diagram for Bst\+CNode\+:
-\nopagebreak
+Collaboration diagram for Bst\+CNode\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
