--- a/docs/latex/structHashC__table.tex
+++ b/docs/latex/structHashC__table.tex
@@ -11,8 +11,7 @@ Our main table struct which contains our pairs. This is the main object that use
 
 
 
-Collaboration diagram for Hash\+C\+\_\+table\+:
-\nopagebreak
+Collaboration diagram for Hash\+C\+\_\+table\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
