--- a/docs/latex/structLinkC.tex
+++ b/docs/latex/structLinkC.tex
@@ -11,8 +11,7 @@ The main struct that contains essential information about our linked list.
 
 
 
-Collaboration diagram for LinkC\+:
-\nopagebreak
+Collaboration diagram for LinkC\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
