--- a/docs/latex/structLinkCNode.tex
+++ b/docs/latex/structLinkCNode.tex
@@ -11,8 +11,7 @@ The nodes that make up our linked list.
 
 
 
-Collaboration diagram for Link\+CNode\+:
-\nopagebreak
+Collaboration diagram for Link\+CNode\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
