--- a/docs/latex/DynamiC_8c.tex
+++ b/docs/latex/DynamiC_8c.tex
@@ -10,8 +10,7 @@ Implementation of \mbox{\hyperlink{structDynamiC}{DynamiC}}.
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include $<$string.\+h$>$}\newline
 {\ttfamily \#include $<$math.\+h$>$}\newline
-Include dependency graph for Dynami\+C.\+c\+:
-\nopagebreak
+Include dependency graph for Dynami\+C.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
