--- a/docs/latex/GraphC_8c.tex
+++ b/docs/latex/GraphC_8c.tex
@@ -9,8 +9,7 @@ Implementation of \mbox{\hyperlink{structGraphC}{GraphC}}, an undirected, unweig
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include $<$string.\+h$>$}\newline
-Include dependency graph for Graph\+C.\+c\+:
-\nopagebreak
+Include dependency graph for Graph\+C.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
