--- a/docs/latex/HashC_8h.tex
+++ b/docs/latex/HashC_8h.tex
@@ -5,8 +5,7 @@
 Interface for \mbox{\hyperlink{HashC_8c}{Hash\+C.\+c}}.  
 
 
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
