--- a/docs/latex/bstC_8c.tex
+++ b/docs/latex/bstC_8c.tex
@@ -10,8 +10,7 @@ Implementation of bstC.
 {\ttfamily \#include $<$string.\+h$>$}\newline
 {\ttfamily \#include $<$math.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}bst\+C.\+h\char`\"{}}\newline
-Include dependency graph for bst\+C.\+c\+:
-\nopagebreak
+Include dependency graph for bst\+C.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
