--- a/docs/latex/helper__functions_8h.tex
+++ b/docs/latex/helper__functions_8h.tex
@@ -8,16 +8,14 @@ Includes useful functions mainly used by the unit tests.
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include $<$string.\+h$>$}\newline
-Include dependency graph for helper\+\_\+functions.\+h\+:
-\nopagebreak
+Include dependency graph for helper\+\_\+functions.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=260pt]{helper__functions_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
