--- a/docs/latex/structGraphC.tex
+++ b/docs/latex/structGraphC.tex
@@ -2,8 +2,16 @@
 \label{structGraphC}\index{GraphC@{GraphC}}
 
 
-Collaboration diagram for GraphC\+:
-\nopagebreak
+The main data structure used to interact and interface with the graph.  
+
+
+
+
+{\ttfamily \#include $<$Graph\+C.\+h$>$}
+
+
+
+Collaboration diagram for GraphC\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -13,16 +21,37 @@ Collaboration diagram for GraphC\+:
 \doxysubsection*{Data Fields}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{structGraphC_abbe30020f968303b2d42f6f5eff7eb79}\label{structGraphC_abbe30020f968303b2d42f6f5eff7eb79}} 
-size\+\_\+t {\bfseries num\+\_\+of\+\_\+edges}
+size\+\_\+t \mbox{\hyperlink{structGraphC_a7a2f6afd77c6cfb59f7161874e559298}{num\+\_\+of\+\_\+edges}}
 \item 
-\mbox{\Hypertarget{structGraphC_a1237260a437190c72d05bc41d4ad9d87}\label{structGraphC_a1237260a437190c72d05bc41d4ad9d87}} 
-size\+\_\+t {\bfseries num\+\_\+of\+\_\+vertices}
+size\+\_\+t \mbox{\hyperlink{structGraphC_a67858fc48fce3a3aa2f426eb5f66099b}{num\+\_\+of\+\_\+vertices}}
 \item 
-\mbox{\Hypertarget{structGraphC_a2633e412bb48ba5aeada842339cfbf9a}\label{structGraphC_a2633e412bb48ba5aeada842339cfbf9a}} 
-\mbox{\hyperlink{structVertex}{Vertex}} $\ast$ {\bfseries vertices}
+\mbox{\hyperlink{structVertex}{Vertex}} $\ast$ \mbox{\hyperlink{structGraphC_aee8ae1a7b1a4c9a67887ad5eb14ec6bb}{vertices}}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+The main data structure used to interact and interface with the graph. 
+
+\doxysubsection{Field Documentation}
+\mbox{\Hypertarget{structGraphC_a7a2f6afd77c6cfb59f7161874e559298}\label{structGraphC_a7a2f6afd77c6cfb59f7161874e559298}} 
+\index{GraphC@{GraphC}!num\_of\_edges@{num\_of\_edges}}
+\index{num\_of\_edges@{num\_of\_edges}!GraphC@{GraphC}}
+\doxysubsubsection{\texorpdfstring{num\_of\_edges}{num\_of\_edges}}
+{\footnotesize\ttfamily Graph\+C\+::num\+\_\+of\+\_\+edges}
+
+The number of edges contained in our graph. A single edge is defined as a connection between a pair of vertices. \mbox{\Hypertarget{structGraphC_a67858fc48fce3a3aa2f426eb5f66099b}\label{structGraphC_a67858fc48fce3a3aa2f426eb5f66099b}} 
+\index{GraphC@{GraphC}!num\_of\_vertices@{num\_of\_vertices}}
+\index{num\_of\_vertices@{num\_of\_vertices}!GraphC@{GraphC}}
+\doxysubsubsection{\texorpdfstring{num\_of\_vertices}{num\_of\_vertices}}
+{\footnotesize\ttfamily Graph\+C\+::num\+\_\+of\+\_\+vertices}
+
+The number of vertices contained in our graph. A single vertex is defined as a data node or point that make up a graph. \mbox{\Hypertarget{structGraphC_aee8ae1a7b1a4c9a67887ad5eb14ec6bb}\label{structGraphC_aee8ae1a7b1a4c9a67887ad5eb14ec6bb}} 
+\index{GraphC@{GraphC}!vertices@{vertices}}
+\index{vertices@{vertices}!GraphC@{GraphC}}
+\doxysubsubsection{\texorpdfstring{vertices}{vertices}}
+{\footnotesize\ttfamily Graph\+C\+::vertices}
+
+A pointer to the first vertex in our graph. Every unique instance of a vertex is stored in a contiguous array. It\textquotesingle{}s easier to think of the graph as an array of linked lists. 
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
