--- a/docs/latex/structVertex.tex
+++ b/docs/latex/structVertex.tex
@@ -2,8 +2,16 @@
 \label{structVertex}\index{Vertex@{Vertex}}
 
 
-Collaboration diagram for Vertex\+:
-\nopagebreak
+The main nodes that make up the graph. Contains a pointer to another vertex as it\textquotesingle{}s neighbor, if one exists.  
+
+
+
+
+{\ttfamily \#include $<$Graph\+C.\+h$>$}
+
+
+
+Collaboration diagram for Vertex\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -13,13 +21,29 @@ Collaboration diagram for Vertex\+:
 \doxysubsection*{Data Fields}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{structVertex_a8126bb7d36489e554873077bcd783e7c}\label{structVertex_a8126bb7d36489e554873077bcd783e7c}} 
-char {\bfseries key}
+char \mbox{\hyperlink{structVertex_af787dc3fe26d50e1a278578b462863d6}{key}}
 \item 
-\mbox{\Hypertarget{structVertex_ab532a24c8d089b9e7f923361c8dad44a}\label{structVertex_ab532a24c8d089b9e7f923361c8dad44a}} 
-\mbox{\hyperlink{structVertex}{Vertex}} $\ast$ {\bfseries next\+\_\+adj\+\_\+vertex}
+\mbox{\hyperlink{structVertex}{Vertex}} $\ast$ \mbox{\hyperlink{structVertex_a667860d10597220af4e5a04fa724c839}{next\+\_\+adj\+\_\+vertex}}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+The main nodes that make up the graph. Contains a pointer to another vertex as it\textquotesingle{}s neighbor, if one exists. 
+
+\doxysubsection{Field Documentation}
+\mbox{\Hypertarget{structVertex_af787dc3fe26d50e1a278578b462863d6}\label{structVertex_af787dc3fe26d50e1a278578b462863d6}} 
+\index{Vertex@{Vertex}!key@{key}}
+\index{key@{key}!Vertex@{Vertex}}
+\doxysubsubsection{\texorpdfstring{key}{key}}
+{\footnotesize\ttfamily Vertex\+::key}
+
+Key is simply a label for the vertex to ensure no duplicates exist. \mbox{\Hypertarget{structVertex_a667860d10597220af4e5a04fa724c839}\label{structVertex_a667860d10597220af4e5a04fa724c839}} 
+\index{Vertex@{Vertex}!next\_adj\_vertex@{next\_adj\_vertex}}
+\index{next\_adj\_vertex@{next\_adj\_vertex}!Vertex@{Vertex}}
+\doxysubsubsection{\texorpdfstring{next\_adj\_vertex}{next\_adj\_vertex}}
+{\footnotesize\ttfamily Vertex\+::next\+\_\+adj\+\_\+vertex}
+
+next\+\_\+adj\+\_\+vertex is a pointer to another \mbox{\hyperlink{structVertex}{Vertex}} object adjacent to this one. The pointers are structured as a linked list. 
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
