Trying to get these Doxygen source files out.

--- a/docs/latex/DynamiC_8c.tex
+++ b/docs/latex/DynamiC_8c.tex
@@ -169,7 +169,7 @@ Initializes our dynamic array.
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-Dynami\+C$\ast$ A pointer to your newly created dynamic array. 
+A \mbox{\hyperlink{structDynamiC}{DynamiC}} pointer to a newly created array. 
 \end{DoxyReturn}
 \mbox{\Hypertarget{DynamiC_8c_aa6f27a0dc3df28f051c09aca0695d112}\label{DynamiC_8c_aa6f27a0dc3df28f051c09aca0695d112}} 
 \index{DynamiC.c@{DynamiC.c}!DynamiC\_insert@{DynamiC\_insert}}
