--- a/docs/latex/GraphCTest_8c.tex
+++ b/docs/latex/GraphCTest_8c.tex
@@ -32,6 +32,9 @@ void {\bfseries test\+\_\+\+Graph\+C\+\_\+add\+\_\+vertex} (void)
 \mbox{\Hypertarget{GraphCTest_8c_a9a5159cfa5577e821d5727426b037308}\label{GraphCTest_8c_a9a5159cfa5577e821d5727426b037308}} 
 void {\bfseries test\+\_\+\+Graph\+C\+\_\+add\+\_\+edge} (void)
 \item 
+\mbox{\Hypertarget{GraphCTest_8c_aa9f9d8b8c74e1b9c0868e306e1b74adf}\label{GraphCTest_8c_aa9f9d8b8c74e1b9c0868e306e1b74adf}} 
+void {\bfseries test\+\_\+\+Graph\+C\+\_\+remove\+\_\+vertex} (void)
+\item 
 \mbox{\Hypertarget{GraphCTest_8c_a1ab53cb707d08d0a528110306d792f80}\label{GraphCTest_8c_a1ab53cb707d08d0a528110306d792f80}} 
 void {\bfseries test\+\_\+\+Graph\+C\+\_\+destroy} (void)
 \item 
