--- a/docs/latex/LinkCTest_8c.tex
+++ b/docs/latex/LinkCTest_8c.tex
@@ -28,11 +28,14 @@ void {\bfseries test\+\_\+\+Link\+C\+\_\+get} (void)
 \mbox{\Hypertarget{LinkCTest_8c_a1a3aa7f24488ab887854f61347e0ab9d}\label{LinkCTest_8c_a1a3aa7f24488ab887854f61347e0ab9d}} 
 void {\bfseries test\+\_\+\+Link\+C\+\_\+insert\+\_\+at\+\_\+end} (void)
 \item 
+\mbox{\Hypertarget{LinkCTest_8c_a34703e27c96408975e06629645d9622b}\label{LinkCTest_8c_a34703e27c96408975e06629645d9622b}} 
+void {\bfseries test\+\_\+\+Link\+C\+\_\+insert\+\_\+at\+\_\+index} (void)
+\item 
 \mbox{\Hypertarget{LinkCTest_8c_a24383e2f3febbac52b5e511dd16878c0}\label{LinkCTest_8c_a24383e2f3febbac52b5e511dd16878c0}} 
 void {\bfseries test\+\_\+\+Link\+C\+\_\+find} (void)
 \item 
-\mbox{\Hypertarget{LinkCTest_8c_a34703e27c96408975e06629645d9622b}\label{LinkCTest_8c_a34703e27c96408975e06629645d9622b}} 
-void {\bfseries test\+\_\+\+Link\+C\+\_\+insert\+\_\+at\+\_\+index} (void)
+\mbox{\Hypertarget{LinkCTest_8c_aa74baebc5e38884d2d63c5f6c528c480}\label{LinkCTest_8c_aa74baebc5e38884d2d63c5f6c528c480}} 
+void {\bfseries test\+\_\+\+Link\+C\+\_\+remove} (void)
 \item 
 \mbox{\Hypertarget{LinkCTest_8c_a95c834d6178047ce9e1bce7cbfea2836}\label{LinkCTest_8c_a95c834d6178047ce9e1bce7cbfea2836}} 
 void {\bfseries set\+Up} (void)
