--- a/docs/latex/structDynamiC.tex
+++ b/docs/latex/structDynamiC.tex
@@ -12,35 +12,40 @@ Our main struct that contains all the data and metainfo about our dynamic array.
 \doxysubsection*{Data Fields}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{structDynamiC_ad3f3e13f30a45bf7445ce8363d5e4e59}\label{structDynamiC_ad3f3e13f30a45bf7445ce8363d5e4e59}} 
-size\+\_\+t {\bfseries data\+\_\+size}
+size\+\_\+t \mbox{\hyperlink{structDynamiC_ae2da736ccf5ab953e9f1af33853d7a05}{data\+\_\+size}}
 \item 
 \mbox{\Hypertarget{structDynamiC_a38afcc2a2c7773d20b0dda84f0c1a8c1}\label{structDynamiC_a38afcc2a2c7773d20b0dda84f0c1a8c1}} 
 size\+\_\+t {\bfseries capacity}
 \item 
-\mbox{\Hypertarget{structDynamiC_a03c097abd67c3ecfdecddf8cf04b222a}\label{structDynamiC_a03c097abd67c3ecfdecddf8cf04b222a}} 
-size\+\_\+t {\bfseries alloc\+\_\+data}
+size\+\_\+t \mbox{\hyperlink{structDynamiC_adbe6b45d16f1eb037816b8af56acd361}{alloc\+\_\+data}}
 \item 
-\mbox{\Hypertarget{structDynamiC_a4672fe8439a7a8818f94ba4252bb2039}\label{structDynamiC_a4672fe8439a7a8818f94ba4252bb2039}} 
-void $\ast$ {\bfseries data}
+void $\ast$ \mbox{\hyperlink{structDynamiC_a9ba49a2d1beea074f46e94943e478c30}{data}}
 \end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
 Our main struct that contains all the data and metainfo about our dynamic array. 
 
+\doxysubsection{Field Documentation}
+\mbox{\Hypertarget{structDynamiC_adbe6b45d16f1eb037816b8af56acd361}\label{structDynamiC_adbe6b45d16f1eb037816b8af56acd361}} 
+\index{DynamiC@{DynamiC}!alloc\_data@{alloc\_data}}
+\index{alloc\_data@{alloc\_data}!DynamiC@{DynamiC}}
+\doxysubsubsection{\texorpdfstring{alloc\_data}{alloc\_data}}
+{\footnotesize\ttfamily Dynami\+C\+::alloc\+\_\+data}
 
-\begin{DoxyParams}{Parameters}
-{\em data\+\_\+size} & How large, in bytes, each element is \\
-\hline
-{\em capacity} & Current max size of the array \\
-\hline
-{\em alloc\+\_\+data} & Amount of data currently allocated with actual data, in bytes \\
-\hline
-{\em data} & The void pointer to our actual data \\
-\hline
-\end{DoxyParams}
+The amount of data, in bytes, currently allocated and written to with actual data. \mbox{\Hypertarget{structDynamiC_a9ba49a2d1beea074f46e94943e478c30}\label{structDynamiC_a9ba49a2d1beea074f46e94943e478c30}} 
+\index{DynamiC@{DynamiC}!data@{data}}
+\index{data@{data}!DynamiC@{DynamiC}}
+\doxysubsubsection{\texorpdfstring{data}{data}}
+{\footnotesize\ttfamily Dynami\+C\+::data}
 
+A pointer to the first element of our array. \mbox{\Hypertarget{structDynamiC_ae2da736ccf5ab953e9f1af33853d7a05}\label{structDynamiC_ae2da736ccf5ab953e9f1af33853d7a05}} 
+\index{DynamiC@{DynamiC}!data\_size@{data\_size}}
+\index{data\_size@{data\_size}!DynamiC@{DynamiC}}
+\doxysubsubsection{\texorpdfstring{data\_size}{data\_size}}
+{\footnotesize\ttfamily Dynami\+C\+::data\+\_\+size}
+
+How large, in bytes, each element is. 
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
