--- a/docs/latex/LinkC_8h.tex
+++ b/docs/latex/LinkC_8h.tex
@@ -90,6 +90,12 @@ int \mbox{\hyperlink{LinkC_8h_a9cf13f1754403c972f25df1ef7c031e3}{Link\+C\+\_\+fi
 \begin{DoxyCompactList}\small\item\em Attempts to find the specified data in our list. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{LinkC_8h_a83f1a644942d215f36c636f982136d74}{Link\+C\+\_\+delete}} (\mbox{\hyperlink{structLinkC}{LinkC}} $\ast$$\ast$list)
 \begin{DoxyCompactList}\small\item\em Frees up all memory used by our list and their respective pointers. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{LinkC_8h_ad53440d48abe78a6b2f23af965c70484}{Link\+C\+\_\+remove\+\_\+at\+\_\+middle}} (\mbox{\hyperlink{structLinkC}{LinkC}} $\ast$list, size\+\_\+t index)
+\begin{DoxyCompactList}\small\item\em Removes a single node from the middle of the list at the specified index. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{LinkC_8h_af2d91cfe650825e58fe7efda845a788d}{Link\+C\+\_\+remove\+\_\+head}} (\mbox{\hyperlink{structLinkC}{LinkC}} $\ast$list)
+\begin{DoxyCompactList}\small\item\em Removes the first node at the head of the list. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{LinkC_8h_a6cac754799474204ca9dd29474b0e784}{Link\+C\+\_\+remove\+\_\+tail}} (\mbox{\hyperlink{structLinkC}{LinkC}} $\ast$list)
+\begin{DoxyCompactList}\small\item\em Removes the last node at the tail of the list. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{LinkC_8h_aa6fded8bd21aa569d653aa6d9ef55c18}{Link\+C\+\_\+insert\+\_\+at\+\_\+start}} (\mbox{\hyperlink{structLinkC}{LinkC}} $\ast$list, void $\ast$data)
 \begin{DoxyCompactList}\small\item\em Inserts a single element at the end of the list. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{LinkC_8h_aa575cdea5be33cfc0b5b46bed20d70ce}{Link\+C\+\_\+insert\+\_\+at\+\_\+index}} (\mbox{\hyperlink{structLinkC}{LinkC}} $\ast$list, void $\ast$data, size\+\_\+t index)
@@ -263,6 +269,53 @@ Inserts a single element at the end of the list.
 {\em list} & \mbox{\hyperlink{structLinkC}{LinkC}} pointer to our list \\
 \hline
 {\em data} & Void pointer to our data to be inserted \\
+\hline
+\end{DoxyParams}
+\mbox{\Hypertarget{LinkC_8h_ad53440d48abe78a6b2f23af965c70484}\label{LinkC_8h_ad53440d48abe78a6b2f23af965c70484}} 
+\index{LinkC.h@{LinkC.h}!LinkC\_remove\_at\_middle@{LinkC\_remove\_at\_middle}}
+\index{LinkC\_remove\_at\_middle@{LinkC\_remove\_at\_middle}!LinkC.h@{LinkC.h}}
+\doxysubsubsection{\texorpdfstring{LinkC\_remove\_at\_middle()}{LinkC\_remove\_at\_middle()}}
+{\footnotesize\ttfamily void Link\+C\+\_\+remove\+\_\+at\+\_\+middle (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{structLinkC}{LinkC}} $\ast$}]{list,  }\item[{size\+\_\+t}]{index }\end{DoxyParamCaption})}
+
+
+
+Removes a single node from the middle of the list at the specified index. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em list} & The linked list \\
+\hline
+{\em index} & The index of the element to be removed \\
+\hline
+\end{DoxyParams}
+\mbox{\Hypertarget{LinkC_8h_af2d91cfe650825e58fe7efda845a788d}\label{LinkC_8h_af2d91cfe650825e58fe7efda845a788d}} 
+\index{LinkC.h@{LinkC.h}!LinkC\_remove\_head@{LinkC\_remove\_head}}
+\index{LinkC\_remove\_head@{LinkC\_remove\_head}!LinkC.h@{LinkC.h}}
+\doxysubsubsection{\texorpdfstring{LinkC\_remove\_head()}{LinkC\_remove\_head()}}
+{\footnotesize\ttfamily void Link\+C\+\_\+remove\+\_\+head (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{structLinkC}{LinkC}} $\ast$}]{list }\end{DoxyParamCaption})}
+
+
+
+Removes the first node at the head of the list. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em list} & \\
+\hline
+\end{DoxyParams}
+\mbox{\Hypertarget{LinkC_8h_a6cac754799474204ca9dd29474b0e784}\label{LinkC_8h_a6cac754799474204ca9dd29474b0e784}} 
+\index{LinkC.h@{LinkC.h}!LinkC\_remove\_tail@{LinkC\_remove\_tail}}
+\index{LinkC\_remove\_tail@{LinkC\_remove\_tail}!LinkC.h@{LinkC.h}}
+\doxysubsubsection{\texorpdfstring{LinkC\_remove\_tail()}{LinkC\_remove\_tail()}}
+{\footnotesize\ttfamily void Link\+C\+\_\+remove\+\_\+tail (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{structLinkC}{LinkC}} $\ast$}]{list }\end{DoxyParamCaption})}
+
+
+
+Removes the last node at the tail of the list. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em list} & \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{LinkC_8h_aeeb832dcba0f0a2dd8542694b5e4b92f}\label{LinkC_8h_aeeb832dcba0f0a2dd8542694b5e4b92f}} 
